Ajuste. Angelo PI3.

--- a/LojaDeGamesPIII/src/main/webapp/css/listaProduto.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/listaProduto.css
@@ -38,11 +38,15 @@
 }
 .corpodecampos
 {
- width: 70%;
+ width: 90%;
  margin-top: 2%;
  margin-bottom: 2%;
 }
 .separadorcarrocel
 {
     background-color: purple;
+}
+.descricaoProduto
+{
+    width: 80%;
 }
