--- a/LojaDeGamesPIII/src/main/webapp/css/listaProduto.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/listaProduto.css
@@ -1,32 +1,32 @@
 .btnSair
 {
-	background-color:purple;
+    background-color:purple;
 }
 .btnProdutos
 {
-	float:right;
-	margin-left:35%;
+    float:right;
+    margin-left:35%;
 }
 .btnClientes
 {
-	float:left;
-	margin-right:35%;
+    float:left;
+    margin-right:35%;
 }
 .btnClientes,.btnProdutos
 {
-	margin-top:1%;
+    margin-top:1%;
 }
 .navbarbotoes
 {
-	background-color:purple;
-	margin-bottom:2%;
+    background-color:purple;
+    margin-bottom:2%;
 }
 .buscajogoscorpo
 {
-	width:60%;
-	margin-left:20%;
-	margin-bottom:3%;
-	margin-top:3%;
+    width:60%;
+    margin-left:20%;
+    margin-bottom:3%;
+    margin-top:3%;
 }
 .btnCadastrar
 {
@@ -38,9 +38,9 @@
 }
 .corpodecampos
 {
- width: 90%;
- margin-top: 2%;
- margin-bottom: 2%;
+    width: 90%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 .separadorcarrocel
 {
@@ -49,4 +49,11 @@
 .descricaoProduto
 {
     width: 80%;
+}
+
+td{
+    max-width:100px; /* Customise it accordingly */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
