Ajustes. Angelo PI3.

--- a/LojaDeGamesPIII/src/main/webapp/css/listaProduto.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/listaProduto.css
@@ -38,9 +38,9 @@
 }
 .corpodecampos
 {
-    width: 90%;
     margin-top: 2%;
     margin-bottom: 2%;
+    overflow-x:auto;
 }
 .separadorcarrocel
 {
@@ -52,8 +52,24 @@
 }
 
 td{
-    max-width:100px; /* Customise it accordingly */
+
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.btnVoltar
+{
+
+    margin-bottom: 2%;
+    margin-top: 2%;
+    background-color: blue;
+    color:white;
+    float:left;
+    margin-left:2%;
+
+}
+.corpotabela
+{
+    width: 90%;
+    margin:auto;
 }
