--- a/LojaDeGamesPIII/src/main/webapp/css/index.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/index.css
@@ -79,3 +79,19 @@
 {
     background-color: purple;
 }
+.corpodeopcoes
+{
+    margin-top: 2%;
+}
+.btnopcoes{
+    margin-top: 2%;
+
+}
+.btnSair
+{
+    background-color: purple;   
+}
+.corpodeopcoes
+{
+    margin-left: 10%;
+}
