--- a/LojaDeGamesPIII/src/main/webapp/css/carrinho.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/carrinho.css
@@ -56,11 +56,11 @@ table
 }
 .informacoesdocliente
 {
-    
+
 }
 .informacoessobrepreco
 {
-   float:right;
+    float:right;
 
 }
 .qtdDesconto{
@@ -73,4 +73,16 @@ table
 .valorsubtotal
 {
     width: 70px;
+}
+
+.btnFinalizar
+{
+    margin-top: 10%;
+    float:right;
+}
+.btnContinuar
+{
+    margin-top: 5%;
+    float:left;
+
 }
