--- a/LojaDeGamesPIII/src/main/webapp/css/destaques.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/destaques.css
@@ -1,76 +1,82 @@
 .btnCarrinho
 {
-	background-color:purple;
-	width:10%;
+    background-color:purple;
+    width:10%;
 }
 .imagemcarrinho
 {
-	width:25%;
+    width:25%;
 }
 .buscajogos
 {
-	width:80%;
-	margin-left:10%;
-	margin-top:1%;
+    width:80%;
+    margin-left:10%;
+    margin-top:1%;
 }
 .buscagames
 {
-	margin-left:20%;
-	margin-top:2%;
-	
+    margin-left:20%;
+    margin-top:2%;
+
 }
 .destaque
 {
-	
-	width:60%;
-	margin-left:18%;
+
+    width:60%;
+    margin-left:18%;
 }
 .imagemestrela
 {
-	width:10%;
+    width:10%;
 }
 .imagemdestaque
 {
-	width:100%;
+    width:100%;
 }
 .imagecard
 {
-	width:50%;
+    width:50%;
 }
 .card
 {
-	margin-left:0.5%;
-	margin-top:1%;
-	width: 19%;
+    margin-left:0.5%;
+    margin-top:1%;
+    width: 19%;
 }
 
 .suporte
 {
-	
+
 }
 .corpodeprodutos
 {
-	margin-bottom:2%;
+    margin-bottom:2%;
 }
 
 .dropdown
 {
-	margin-left:15%;
+    margin-left:15%;
 }
 .itemdelista
 {
-	margin-left:4%;
+    margin-left:4%;
 }
 .plataforma
 {
-	margin-left:20%;
+    margin-left:20%;
 }
 .categoriadojogo,.anodelancamento
 {
-	margin-left:4%;
+    margin-left:4%;
 }
 .filtros
 {
-	background-color:purple;
-	padding-bottom:8px;
+    background-color:purple;
+    padding-bottom:8px;
+}
+.descricoes {
+    max-width: 25ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
