--- a/LojaDeGamesPIII/src/main/webapp/css/index.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/index.css
@@ -95,3 +95,12 @@
 {
     margin-left: 10%;
 }
+.corpodeopcoesmenus
+{
+     margin-left: 18%;
+}
+.corpodeopcoesmenusbemvindo
+{
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
