--- a/LojaDeGamesPIII/src/main/webapp/css/pagamento.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/pagamento.css
@@ -99,9 +99,21 @@ table
 {
     width: 15px;
 }
-.corpopagamento
+.corpoopcaocartao
 {
-    border: 2px solid purple;
+    border: 0.5px solid purple;
+    border-radius: 10px;
+}
+.corpoopcaodinheiro
+{
+    margin-top: 2%;
+    border: 0.5px solid purple;
+    border-radius: 10px;
+}
+.corpovalortotal
+{
+    margin-bottom:  2%;
+    border: 0.5px solid purple;
     border-radius: 10px;
 }
 .titulocorpopagamento
@@ -111,10 +123,43 @@ table
 .corpopagamento
 {
     margin-left: 4%;
-    
+
 }
-.corpoopcaocartao
+.corpoopcaocartao,.corpoopcaodinheiro,.corpovalortotal
 {
+    margin-left: 15%;
     padding-bottom: 2%;
     padding-top: 2%;
+}
+.corpodebotoesfinais
+{
+    margin-top: 4%;
+    margin-left: 25%;
+    margin-bottom: 4%;
+}
+.vezesCartao
+{
+    width: 16%;
+}
+#bandeira
+{
+    width: 25%;
+}
+#numeroComprovante
+{
+    width: 35%;
+}
+.btnFinalizarImprimir
+{
+    background-color: greenyellow;
+    color:black;
+}
+.btnVoltaCarrinho
+{
+    background-color: orange;
+}
+.btnCancelar
+{
+    background-color: black;
+    color:white;
 }
