--- a/LojaDeGamesPIII/src/main/webapp/css/destaques.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/destaques.css
@@ -82,5 +82,22 @@
 }
 .addCarrinhoDiv
 {
-    background-color: red;
+    background-color: #0056b3;
+    text-align: center;
+    border: 0.5px solid purple;
+    border-radius: 10px;
+    color:white;
+}
+.imagemstar
+{
+    width: 40px;
+}
+.imagemrs
+{
+     width: 25px;
+}
+.addCarrinhoDiv
+{
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
