--- a/LojaDeGamesPIII/src/main/webapp/css/pagamento.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/pagamento.css
@@ -149,6 +149,10 @@ table
 {
     width: 35%;
 }
+#valorParcela
+{
+    width: 25%;
+}
 .btnFinalizarImprimir
 {
     background-color: greenyellow;
