--- a/LojaDeGamesPIII/src/main/webapp/css/index.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/index.css
@@ -104,3 +104,24 @@
     margin-top: 2%;
     margin-bottom: 2%;
 }
+
+.container-menu-desktop {
+  height: auto;
+  width: 100%;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+
+.menu-desktop {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
