--- a/LojaDeGamesPIII/src/main/webapp/css/menu.css
+++ b/LojaDeGamesPIII/src/main/webapp/css/menu.css
@@ -29,3 +29,40 @@
 {
 	width:2%;
 }
+
+.container-menu-desktop {
+  height: auto;
+  width: 100%;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+
+.menu-desktop {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: ruby-base;
+  align-items: baseline;
+  height: 80%;
+}
+
+.main-menu {
+  list-style-type: none;
+  margin: 0;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+}
+
+.main-menu > li.active-menu > a {
+  color: #6c7ae0;
+}
